force-app/main/default/objects/co_insurance__dll/co_insurance__dll.object-meta.xml
<CustomObject>
    <label>co_insurance</label>
    <mktDataLakeAttributes>
        <creationType>Standard</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>