force-app/main/default/objects/co_insurance__dll/fields/co_insurer__c.field-meta.xml
<CustomField>
    <fullName>co_insurer__c</fullName>
    <label>co_insurer</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>co_insurer</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>