force-app/main/default/objects/co_insurance__dll/fields/participation_percentage__c.field-meta.xml
<CustomField>
    <fullName>participation_percentage__c</fullName>
    <label>participation_percentage</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>participation_percentage</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>